--- a/installer/Makefile
+++ b/installer/Makefile
@@ -3,3 +3,9 @@ all:
 	cp ../extra/nightmode.ini mnt/onboard/.kobo
 	cp ../src/screenInv.so root
 	tar czf KoboRoot.tgz etc mnt root
+	
+debug:
+	cp ../extra/nightmode.sh mnt/onboard/.kobo
+	cp ../extra/nightmode.ini mnt/onboard/.kobo
+	cp ../src/screenInv.so root
+	tar czf KoboRoot.tgz root	
