created debug mode for installer (just .so file)

--- a/installer/Makefile
+++ b/installer/Makefile
@@ -8,4 +8,4 @@ debug:
 	cp ../extra/nightmode.sh mnt/onboard/.kobo
 	cp ../extra/nightmode.ini mnt/onboard/.kobo
 	cp ../src/screenInv.so root
-	tar czf KoboRoot.tgz root	
+	tar czf KoboRoot.tgz root/screenInv.so
