--- a/installer/mnt/onboard/.kobo/nightmode.ini
+++ b/installer/mnt/onboard/.kobo/nightmode.ini
@@ -1,11 +1,23 @@
 # config file for kobo-nightmode
 
 [state]
-invertActive = no               # yes / no
-retainStateOverRestart = yes    # yes / no
+invertActive = no		# yes / no
+retainStateOverRestart = yes	# yes / no
 
 [control]
 longPressDurationMS = 800       # time in milliseconds to toggle (1000 = 1 second)
 
 [nightmode]
-refreshScreenPages = 0			#force refresh every X pages
+refreshScreenPages = 0		#force refresh every X pages
+disableNightmode = yes		# yes / no
+
+[brightness]
+1percentPatch = yes		# yes / no : Nickel set brightness to 2% even when on UI it is set to 1%
+				#            this patch will force brightenss to 1% when:
+				#		- it was set to 1%, then it was set to 0% (for instance: stand-by) then changed again to "what Nickel says is 2%"
+				#		- it was set to 3%, then it was set to 1% then changed again to "what Nickel says is 2%"
+timeout = 7			# time in seconds, after brightness is set (and maintained) to a given level, to toggle the action set to that level
+3 = toggleNightMode		# when brightness is set to 3% : special action, toggle night toggleNightMode 
+#some examples of invoking any script when brightness is set to X% for at least TIMEOUT seconds
+#4 = touch /mnt/onboard/hello.world
+#5 = touch /mnt/onboard/hello.world.async &
