adding feature: use light button to execute command
draft for auto-shutdown feature

created updateLib target (to just update screenInv.so)

--- a/installer/Makefile
+++ b/installer/Makefile
@@ -1,11 +1,7 @@
+debug: all
 all:
 	cp ../extra/nightmode.sh mnt/onboard/.kobo
 	cp ../extra/nightmode.ini mnt/onboard/.kobo
 	cp ../src/screenInv.so root
 	tar czf KoboRoot.tgz etc mnt root
-	
-debug:
-	cp ../extra/nightmode.sh mnt/onboard/.kobo
-	cp ../extra/nightmode.ini mnt/onboard/.kobo
-	cp ../src/screenInv.so root
-	tar czf KoboRoot.tgz root/screenInv.so
+
