fixed some bugs

--- a/extra/nightmode.ini
+++ b/extra/nightmode.ini
@@ -6,6 +6,12 @@ retainStateOverRestart = yes	# yes / no
 
 [control]
 longPressDurationMS = 800       # time in milliseconds to toggle (1000 = 1 second)
+lightButtonAction = toggleNightMode	# actions associated to long press of light button:
+					# - toggleNightMode : toggle the nightmode (default)
+					# - launchCommand : launch the command specified by variable "launchButtonCommand"
+					# - both : toggle nightmode and launch the command
+lightButtonCommand = /mnt/onboard/.kobo/testScript.sh  # of course this command is ignored when lightButtonAction = toggleNightMode
+switchOffTimeout = 14400		# if set to a value > 0, it is the timeout in seconds after then switch off the kobo device (default: 0 -> timeout disabled)
 
 [nightmode]
 refreshScreenPages = 0		#force refresh every X pages
@@ -14,10 +20,16 @@ disableNightmode = yes		# yes / no
 [brightness]
 1percentPatch = yes		# yes / no : Nickel set brightness to 2% even when on UI it is set to 1%
 				#            this patch will force brightenss to 1% when:
-				#		- it was set to 1%, then it was set to 0% (for instance: stand-by) then changed again to "what Nickel says is 2%"
-				#		- it was set to 3%, then it was set to 1% then changed again to "what Nickel says is 2%"
+				#		- it was set to 1%, then set to 0% (for instance: stand-by) then changed again to "what Nickel says is 2%"
+				#		- it was set to 3%, then set to 1% then changed again to "what Nickel says is 2%"
 timeout = 7			# time in seconds, after brightness is set (and maintained) to a given level, to toggle the action set to that level
-3 = toggleNightMode		# when brightness is set to 3% : special action, toggle night toggleNightMode 
-#some examples of invoking any script when brightness is set to X% for at least TIMEOUT seconds
+## syntax for associating the trigger of an action when brightness is set to X%:
+## X=<command/script>
+## special actions:
+## - toggleNightMode: toggle Nightmode on / off
+## - enableNightMode: force enabling Nightmode
+## - disableNightMode: force disabling Nightmode
+3 = toggleNightMode # when brightness is set to 3% : toggle Nightmode
+# some examples of invoking any script when brightness is set to X% for at least TIMEOUT seconds
 #4 = touch /mnt/onboard/hello.world
 #5 = touch /mnt/onboard/hello.world.async &
