--- a/installer/mnt/onboard/.kobo/nightmode.ini
+++ b/installer/mnt/onboard/.kobo/nightmode.ini
@@ -11,7 +11,8 @@ lightButtonAction = toggleNightMode	# actions associated to long press of light 
 					# - launchCommand : launch the command specified by variable "launchButtonCommand"
 					# - both : toggle nightmode and launch the command
 lightButtonCommand = /mnt/onboard/.kobo/testScript.sh  # of course this command is ignored when lightButtonAction = toggleNightMode
-switchOffTimeout = 14400		# if set to a value > 0, it is the timeout in seconds after then switch off the kobo device (default: 0 -> timeout disabled)
+#this is still work in progress, currently not yet finished
+#switchOffTimeout = 14400		# if set to a value > 0, it is the timeout in seconds after then switch off the kobo device (default: 0 -> timeout disabled)
 
 [nightmode]
 refreshScreenPages = 0		#force refresh every X pages
