--- a/installer/mnt/onboard/.kobo/nightmode.ini
+++ b/installer/mnt/onboard/.kobo/nightmode.ini
@@ -2,34 +2,34 @@
 
 [state]
 invertActive = no		# yes / no
-retainStateOverRestart = yes	# yes / no
+retainStateOverRestart = no	# yes / no
 
 [control]
 longPressDurationMS = 800       # time in milliseconds to toggle (1000 = 1 second)
-lightButtonAction = toggleNightMode	# actions associated to long press of light button:
-					# - toggleNightMode : toggle the nightmode (default)
-					# - launchCommand : launch the command specified by variable "launchButtonCommand"
-					# - both : toggle nightmode and launch the command
-lightButtonCommand = /mnt/onboard/.kobo/testScript.sh  # of course this command is ignored when lightButtonAction = toggleNightMode
-#this is still work in progress, currently not yet finished
-#switchOffTimeout = 14400		# if set to a value > 0, it is the timeout in seconds after then switch off the kobo device (default: 0 -> timeout disabled)
+debug=no			# yes/no to enable/disable debug logging
 
 [nightmode]
-refreshScreenPages = 0		#force refresh every X pages
+refreshScreenPages = 3		#force refresh every X pages
 
 [brightness]
 1percentPatch = yes		# yes / no : Nickel set brightness to 2% even when on UI it is set to 1%
 				#            this patch will force brightenss to 1% when:
-				#		- it was set to 1%, then set to 0% (for instance: stand-by) then changed again to "what Nickel says is 2%"
-				#		- it was set to 3%, then set to 1% then changed again to "what Nickel says is 2%"
-timeout = 7			# time in seconds, after brightness is set (and maintained) to a given level, to toggle the action set to that level
-## syntax for associating the trigger of an action when brightness is set to X%:
-## X=<command/script>
-## special actions:
-## - toggleNightMode: toggle Nightmode on / off
-## - enableNightMode: force enabling Nightmode
-## - disableNightMode: force disabling Nightmode
-3 = toggleNightMode # when brightness is set to 3% : toggle Nightmode
-# some examples of invoking any script when brightness is set to X% for at least TIMEOUT seconds
+				#		- it was set to 1%, then it was set to 0% (for instance: stand-by) then changed again to "what Nickel says is 2%"
+				#		- it was set to 3%, then it was set to 1% then changed again to "what Nickel says is 2%"
+timeout = 5			# time in seconds, after brightness is set (and maintained) to a given level, to toggle the action set to that level
+# switch device off
+7 = echo -ne "\xfe\x0f\xc5\x54\xff\x6a\x0d\x00\x01\x00\x74\x00\x01\x00\x00" > /dev/input/event0 
+# put device in standby
+8 = echo -ne "\xf0\x0f\xc5\x54\x3c\xe0\x0d\x00\x01\x00\x74\x00\x01\x00\x00\x00\xf1\x0f\xc5\x54\x8e\xe3\x02\x00\x01\x00\x74\x00\x00\x00\x00\x00" > /dev/input/event0
+ # when brightness is set to 11% : special action, toggle night toggleNightMode
+11 = toggleNightMode
+12 = enableNightMode
+13 = disableNightMode
+#20 = dmesg > /mnt/onboard/.kobo/dmesg_$(date +%s).log &
+#30 = mv -f /mnt/onboard/.kobo/screenInv.so /root/screenInv.so >/dev/null 2>&1
+#50 = hwclock -w -u
+#98 = touch /mnt/onboard/.kobo/switchoff/test0.log &
+#99 = /mnt/onboard/.kobo/switchoff/test.sh &
+#some examples of invoking any script when brightness is set to X% for at least TIMEOUT seconds
 #4 = touch /mnt/onboard/hello.world
 #5 = touch /mnt/onboard/hello.world.async &
